manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wysiwyg-collab
  labels:
    app.kubernetes.io/part-of: wysiwyg-collab-editor
